Fixed overflow (sort of brute forced), fixed overlay (still don't really understand it)

--- a/landingPage.css
+++ b/landingPage.css
@@ -15,6 +15,8 @@ html {
 html, body {
     height: 100%;
     box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 body {
@@ -30,27 +32,29 @@ body, ul {
 
 /* Navigation Bar */
 
-.nav-top {
+.navigation-bar {
     text-align: center;
     margin: 0 auto;
-    height: 100px;
+    height: 80px;
+    /* border: 1rem solid; */
 }
 
-.nav-top img {
-    max-width: 96px;
-    height: auto;
+.navigation-bar img {
+    max-height: 100%;
+    /* border: 1rem solid; */
 }
 
-.nav-top ul {
+.navigation-bar ul {
     padding: 50px;
     margin: 0px;
     list-style: none;
     text-align: center;
     display: inline-block;
     vertical-align:top;
+    /* border: 1rem solid; */
 }
 
-.nav-top ul li {
+.navigation-bar ul li {
     display: inline;
     margin: 24px 48px;
 }
@@ -67,26 +71,33 @@ body, ul {
 
 /* Hero Section */
 .hero {
-    height: 1200px;
-    text-align: center;
+    height: 100vh;
     background-image: url("./Assets/heroHats.jpeg");
     background-size: cover;
     background-position: center;
     display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.hero-text {
-    background-color: rgba(0, 0, 0, 0.4);
-    text-align: center;
-    font-size: calc(var(--base-font)*2);
-    width: 100%;
-    height: 100%;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+}
+
+.hero-overlay {
+    background-color: rgba(0, 0, 0, 0.4);
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    position: absolute;
+}
+
+.hero-text {
+    font-size: calc(var(--base-font-size)*2);
+    text-align: center;
 }
 
 .hero-text button {
@@ -176,6 +187,6 @@ footer section {
     }
 
     footer section {
-        width: 33.33%;
+        width: 100%; /* Use 100% for full width or adjust as needed */
     }
 }
